--- a/MedicamentosBD/src/Vistas/Inserts/JFPersonal.form
+++ b/MedicamentosBD/src/Vistas/Inserts/JFPersonal.form
@@ -137,7 +137,7 @@
             <Property name="editable" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
-                <StringItem index="0" value="ENFERMERA(O)"/>
+                <StringItem index="0" value="ENFERMERO"/>
                 <StringItem index="1" value="MEDICO"/>
               </StringArray>
             </Property>
