--- a/MedicamentosBD/src/medicamentosbd/MenuPrincipal.form
+++ b/MedicamentosBD/src/medicamentosbd/MenuPrincipal.form
@@ -40,7 +40,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="B_Actualizar" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jToggleButton4" min="-2" pref="115" max="-2" attributes="0"/>
+                              <Component id="B_Borrar" min="-2" pref="115" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -59,7 +59,7 @@
                   <Component id="B_Insertar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="B_VerDatos" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="B_Actualizar" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jToggleButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="B_Borrar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="JP_Contenido" min="-2" max="-2" attributes="0"/>
@@ -104,10 +104,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="B_ActualizarActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton4">
+    <Component class="javax.swing.JToggleButton" name="B_Borrar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Borrar Datos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="B_BorrarActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="JP_Contenido">
 
